Update link start browsing

--- a/src/Website/templates/home.html
+++ b/src/Website/templates/home.html
@@ -6,7 +6,7 @@
         <div class="homeBG-container">
             <h1>Find your business match</h1>
             <h2>Uplinked helps investors and startups find each other</h2>
-            <a href="belom ada">Start Browsing &#x23F5</a>
+            <a href="{{url_for('startups')}}">Start Browsing &#x23F5</a>
         </div>
     </div>
     <div class="underBG">
