--- a/src/Website/templates/home.html
+++ b/src/Website/templates/home.html
@@ -1,5 +1,6 @@
 {%extends 'navbar.html'%}
 {%block layout%}
+<body>
     <div class="homeBG">
         <div class="orgrapat"></div>
         <img class="ungu" src="{{ url_for('static', filename='images/BGUngu.png') }}" alt="warna ungu">
@@ -41,7 +42,7 @@
     <div class="bottom">
         <a class="reginvestor" href="{{url_for('regis_investor')}}">Register as an <b>Investor</b></a>
         <a class="regstartup" href="{{url_for('regis_startup')}}">Register as a <b>Startup Founder</b></a>
-        <div class="separator"></div>
         <div class="endsquare"></div>
     </div>
+</body>
 {%endblock layout%}
