Editted home page rollingbox

--- a/src/Website/templates/home.html
+++ b/src/Website/templates/home.html
@@ -37,7 +37,7 @@
                 <h3>Startup Name</h3>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla eveniet assumenda sapiente repellendus obcaecati corrupti consequatur.</h4>
             </div>
-            <div class="flex-boxBG-next">&#x23F5</div>
+            <a class="flex-boxBG-next">&#x23F5</a>
         </div>
     <div class="bottom">
         <a class="reginvestor" href="{{url_for('regis_investor')}}">Register as an <b>Investor</b></a>
