--- a/src/Website/static/main.css
+++ b/src/Website/static/main.css
@@ -207,11 +207,11 @@ body{
 }
 
 .rollingbox h2{
-  position: absolute;
-  width: 960px;
+  position: relative;
+  width: 80vw;
   height: 58px;
-  left: 89px;
-  top: 40px;
+  top: 2vh;
+  left: 2vw;
 
   font-family: Margaret;
   font-style: normal;
@@ -224,18 +224,18 @@ body{
 
 .flex-box{
   display: flex;
-  width: 90%;
+  width: 95%;
   justify-content: space-around;
   flex: none;
   flex-direction: row;
 
-  padding-top: 180px;
   padding-left: 5%;
+  padding-top: 2vh;
 }
 
 .flex-boxBG{
   width: 20%;
-  height: 18vw;
+  height: 40vh;
 
   background-color:#FFFFFF;
   border-radius: 25px;
@@ -244,7 +244,7 @@ body{
 .flex-boxBG div{
   position: relative;
   width: 100%;
-  height: 9vw;
+  height: 20vh;
 
   border-radius: 25px 25px 0px 0px;
   background: #24005C;
@@ -252,12 +252,22 @@ body{
  
 .flex-boxBG h3{
   position: relative;
+  width: 18vw;
   text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .flex-boxBG h4{
   position: relative;
-  left: 2%;
+  width: 17vw;
+  height: 10vh;
+  left: 1vw;
+
+  font-size: 14px;
+  text-align: justify;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .flex-boxBG-next{
@@ -266,7 +276,7 @@ body{
 
   text-align: center;
   line-height: 18vw;
-  font-size: 8vw;
+  font-size: 10vw;
 }
 .bottom .reginvestor{
   position: absolute;
