Added Comment Box in home

--- a/src/Website/templates/home.html
+++ b/src/Website/templates/home.html
@@ -39,6 +39,11 @@
             </div>
             <a class="flex-boxBG-next">&#x23F5</a>
         </div>
+    </div>
+    <div class="commentpart">
+        <h2>What Does Our User Says</h2>
+        <div class="commentbox">Sementara Comment Box Masih Kosong</div>
+    </div>
     <div class="bottom">
         <a class="reginvestor" href="{{url_for('regis_investor')}}">Register as an <b>Investor</b></a>
         <a class="regstartup" href="{{url_for('regis_startup')}}">Register as a <b>Startup Founder</b></a>
