--- a/src/Website/static/main.css
+++ b/src/Website/static/main.css
@@ -278,12 +278,45 @@ body{
   line-height: 18vw;
   font-size: 10vw;
 }
+
+.commentpart{
+  position: relative;
+  width: 100vw;
+  height: 62vh;
+}
+
+.commentpart h2{
+  position: relative;
+  left: 2vw;
+  top: 2vh;
+  margin: 0%;
+  font-family: Margaret;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 58px;
+
+  color: black;
+}
+
+.commentbox{
+  position: relative;
+  width: 94vw;
+  height: 50vh;
+  left: 2vw;
+  top: 2.5vh;
+  background-color: rgba(118, 1, 102, 0.5);
+
+  text-align: center;
+  line-height: 50vh;
+}
+
 .bottom .reginvestor{
   position: absolute;
   width: 49.8vw;
   height: 20vh;
   left: 0px;
-  top: 130vh;
+  top: 230vh;
 
   font-family: Montserrat;
   font-style: normal;
@@ -301,7 +334,7 @@ body{
   width: 49.8vw;
   height: 20vh;
   right: 0px;
-  top: 130vh;
+  top: 230vh;
 
   font-family: Montserrat;
   font-style: normal;
@@ -319,7 +352,7 @@ body{
   position: absolute;
   width: 100%;
   height: 20vh;
-  top: 150vh;
+  top: 250vh;
 
   background: linear-gradient(229.27deg, #24005C 25.69%, #760166 72.16%);
 }
